<resources>
    <string name="app_name">Just Java</string>
    <string name="quantity">Quantity</string>
    <string name="order">Order</string>
    <string name="price">Price</string>
    <string name="order_summary">Order summary</string>
    <string name="number">0</string>
    <string name="plus">+</string>
    <string name="price_value">0</string>
    <string name="thanks">Thank you!</string>
    <string name="whipped_cream">Whipped Cream</string>
    <string name="toppings">Toppings</string>
    <string name="chocolate">Chocolate</string>
    <string name="name_prompt">Enter your name</string>
    <string name="minus">-</string>
    <string name="number_of_coffees">%1$d</string>
</resources>
